Add attendance list, create and delete endpoints
