# FinalWork2-Microservices/attendance/src/application/dto/createAttendanceRequest.ts
@@ -1,0 +1,6 @@
+export class CreateAttendanceRequest {
+  startDate: string;
+  endDate: string;
+  notes?: string;
+  userId: string;
+}
