# FinalWork2-Microservices/attendance/src/infrastructure/attendanceMapper.ts
@@ -1,5 +1,34 @@
-export class AttendanceMapper {
-  static toDomain() {}
+import { Attendance } from '../domain/attendance';
+import { AttendanceEntity } from './attendance.entity';
 
-  static toPersistence() {}
+export class AttendanceMapper {
+  static toDomain(attendanceEntity: any) {
+    return new Attendance({
+      id: attendanceEntity._id,
+      startDate: attendanceEntity.startDate,
+      endDate: attendanceEntity.endDate,
+      notes: attendanceEntity.notes,
+      userId: attendanceEntity.userId,
+    });
+  }
+
+  static toPersistence(attendance: Attendance) {
+    return new AttendanceEntity({
+      _id: attendance.id,
+      startDate: attendance.startDate,
+      endDate: attendance.endDate,
+      notes: attendance.notes,
+      userId: attendance.userId,
+    });
+  }
+
+  static toResponseDto(attendance: Attendance) {
+    return {
+      id: attendance.id,
+      startDate: attendance.startDate,
+      endDate: attendance.endDate,
+      notes: attendance.notes,
+      userId: attendance.userId,
+    };
+  }
 }
