# FinalWork2-Microservices/attendance/src/infrastructure/attendanceMongooseRepository.ts
@@ -1,5 +1,26 @@
 import { injectable } from 'inversify';
 import { AttendanceRepository } from '../application/attendanceRepository';
+import { NotFoundException } from '../application/exceptions';
+import { Attendance } from '../domain/attendance';
+import { AttendanceEntity } from './attendance.entity';
+import { AttendanceMapper } from './attendanceMapper';
 
 @injectable()
-export class AttendanceMongooseRepository implements AttendanceRepository {}
+export class AttendanceMongooseRepository implements AttendanceRepository {
+  async listAttendances(): Promise<Attendance[]> {
+    const attendanceEntities = await AttendanceEntity.find();
+    return attendanceEntities.map((attendanceEntity) => AttendanceMapper.toDomain(attendanceEntity));
+  }
+
+  async saveAttendance(attendance: Attendance) {
+    const attendanceEntity = AttendanceMapper.toPersistence(attendance);
+    await attendanceEntity.save();
+  }
+
+  async deleteAttendance(id: string) {
+    const { deletedCount } = await AttendanceEntity.deleteOne({ _id: id });
+    if (deletedCount < 1) {
+      throw new NotFoundException(`Attendance with id ${id} not found`);
+    }
+  }
+}
