# FinalWork2-Microservices/attendance/src/infrastructure/presentation/attendanceController.ts
@@ -13,11 +13,21 @@ export class AttendanceController extends BaseHttpController {
   }
 
   @httpGet('/')
-  private async listAttendance(@request() req: Request, @response() res: ExpressResponse) {}
+  private async listAttendance(@request() req: Request, @response() res: ExpressResponse) {
+    const attendances = await this.attendanceService.listAttendances();
+    Response.ok(res, attendances);
+  }
 
   @httpPost('/')
-  private async createAttendance(@request() req: Request, @response() res: ExpressResponse) {}
+  private async createAttendance(@request() req: Request, @response() res: ExpressResponse) {
+    const attendance = await this.attendanceService.createAttendance(req.body);
+    const attendanceDto = AttendanceMapper.toResponseDto(attendance);
+    Response.ok(res, attendanceDto, 'Attendance successfully registered');
+  }
 
   @httpDelete('/:id')
-  private async deleteAttendance(@requestParam('id') id: string, @response() res: ExpressResponse) {}
+  private async deleteAttendance(@requestParam('id') id: string, @response() res: ExpressResponse) {
+    await this.attendanceService.deleteAttendance(id);
+    Response.ok(res, null, 'Attendance successfully deleted');
+  }
 }
